<resources>
    <string name="app_name">My Tasks</string>

    <string name="title_activity_tasks">Tasks</string>

    <string name="title_all_tasks">All tasks</string>
    <string name="title_tasks_in_progress">In progress</string>
    <string name="title_done_tasks">Done</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="username_edittext_hint">Username</string>
    <string name="password_edittext_hint">Password</string>
    <string name="button_signin_text">Sign in</string>

    <string name="nav_all_tasks">All tasks</string>
    <string name="nav_tasks_in_progress">In progress</string>
    <string name="nav_done_tasks">Done</string>

    <string name="nav_agenda">Agenda</string>
    <string name="nav_settings_section">Settings</string>
    <string name="nav_change_user">Change user</string>
    <string name="nav_settings">Settings</string>

    <string name="task_title_template">Lorem ipsum</string>
    <string name="task_date">May 7</string>
    <string name="task_time">04:00</string>
    <string name="task_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
