<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_tasks"
            android:icon="@drawable/ic_all_tasks"
            android:title="@string/nav_all_tasks" />
        <item
            android:id="@+id/nav_tasks_in_progress"
            android:icon="@drawable/ic_tasks_in_progress"
            android:title="@string/nav_tasks_in_progress" />
        <item
            android:id="@+id/nav_done_tasks"
            android:icon="@drawable/ic_done_tasks"
            android:title="@string/nav_done_tasks" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_agenda"
            android:title="@string/nav_agenda" />
    </group>

    <item android:title="@string/nav_settings_section">
        <menu>
            <item
                android:id="@+id/nav_change_user"
                android:icon="@drawable/ic_change_user"
                android:title="@string/nav_change_user" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
